# limpid

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/limpid/: Cargo.toml
crates/limpid-prometheus/: Cargo.toml
crates/limpid-prometheus/src/: main.rs
crates/limpid-tap/: Cargo.toml
crates/limpid-tap/src/: main.rs
crates/limpid/src/: config.rs  control.rs  error_log.rs  event.rs  main.rs  metrics.rs  pipeline.rs  runtime.rs  signal.rs  tap.rs  tls.rs
crates/limpid/src/check/: bindings.rs  control_flow.rs  expr_types.rs  function.rs  graph.rs  mod.rs  outputs.rs  parser_effects.rs  render.rs  suggestions.rs
crates/limpid/src/dsl/: arena.rs  ast.rs  eval.rs  eval_test.rs  exec.rs  exec_test.rs  limpid.pest  mod.rs  parser.rs  props.rs  span.rs  value.rs  value_json.rs
crates/limpid/src/functions/: geoip.rs  mod.rs  table.rs
crates/limpid/src/functions/cef/: mod.rs  parse.rs
crates/limpid/src/functions/otlp/: encode.rs  mod.rs
crates/limpid/src/functions/primitives/: append.rs  coalesce.rs  contains.rs  csv_parse.rs  find_by.rs  format.rs  geoip.rs  hashes.rs  hostname.rs  len.rs  lower.rs  mod.rs  null_omit.rs  parse_json.rs  parse_kv.rs  prepend.rs  regex_extract.rs  regex_match.rs  regex_parse.rs  regex_replace.rs  strftime.rs  string_predicates.rs  strptime.rs  table.rs  timestamp.rs  to_bytes.rs  to_int.rs  to_json.rs  to_string.rs  upper.rs  version.rs
crates/limpid/src/functions/syslog/: extract_pri.rs  mod.rs  parse.rs  pri.rs  set_pri.rs  strip_pri.rs
crates/limpid/src/modules/: mod.rs  schema.rs
crates/limpid/src/modules/input/: journal.rs  mod.rs  otlp_grpc.rs  otlp_http.rs  rate_limit.rs  syslog_tcp.rs  syslog_tls.rs  syslog_udp.rs  tail.rs  unix_socket.rs  validate.rs
crates/limpid/src/modules/input/otlp/: grpc.rs  http.rs  mod.rs
crates/limpid/src/modules/output/: file.rs  http.rs  kafka.rs  mod.rs  otlp.rs  persistent_conn.rs  stdout.rs  tcp.rs  udp.rs  unix_socket.rs
crates/limpid/src/modules/output/otlp/: mod.rs
crates/limpid/src/modules/process/: mod.rs  parse_cef.rs  parse_json.rs  parse_kv.rs  parse_syslog.rs  prepend_source.rs  prepend_timestamp.rs  regex_replace.rs  strip_pri.rs
crates/limpid/src/queue/: disk.rs  mod.rs
crates/limpid/tests/: cli_check.rs
crates/limpidctl/: Cargo.toml
crates/limpidctl/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  design-principles.md  dsl-syntax.md  getting-started.md  introduction.md  otlp.md  tutorial.md
docs/src/functions/: README.md  expression-functions.md  user-defined.md
docs/src/inputs/: README.md  journal.md  otlp-grpc.md  otlp-http.md  syslog-tcp.md  syslog-tls.md  syslog-udp.md  tail.md  unix-socket.md
docs/src/operations/: cli.md  error-log.md  metrics.md  migration.md  packaging.md  schema-validation.md  systemd.md  tap.md  upgrade-0.3.md  upgrade-0.5.md
docs/src/outputs/: README.md  file.md  http.md  kafka.md  otlp.md  stdout.md  tcp.md  udp.md  unix-socket.md
docs/src/pipelines/: README.md  drop-finish-error.md  drop-finish.md  examples.md  multi-host.md  routing.md
docs/src/processing/: README.md  builtin-processes.md  design-guide.md  functions.md  templates.md  user-defined-functions.md  user-defined.md
docs/src/snippets/: README.md  conventions.md
packaging/: limpid-prometheus.default  limpid-prometheus.service  limpid.conf.example  limpid.service  postinst
packaging/snippets/: README.md
packaging/snippets/composers/: compose_ocsf.limpid  compose_replayable.limpid
packaging/snippets/filters/: filter_openssh_journal.limpid
packaging/snippets/parsers/: parse_asa.limpid  parse_cloudtrail.limpid  parse_combined_log.limpid  parse_fortigate_cef.limpid  parse_fortigate_syslog.limpid  parse_ocsf.limpid  parse_openssh.limpid  parse_paloalto_cef.limpid  parse_paloalto_syslog.limpid  parse_postfix.limpid  parse_sudo.limpid  parse_winevent_json.limpid
