[package]
name = "limpid"
version = "0.4.0"
edition = "2024"
description = "Log pipelines, limpid as intent."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
pest = "2"
pest_derive = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
regex-lite = "0.1"
csv = "1"
glob = "0.3"
libc = "0.2"
async-trait = "0.1"
maxminddb = "0.27"
tokio-rustls = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
digest = "0.10"
systemd = { version = "0.10", optional = true }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }

[features]
journal = ["dep:systemd"]
kafka = ["dep:rdkafka"]

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "Naoto Morishima"
copyright = "2026, Naoto Morishima"
extended-description = "A log pipeline daemon with a readable DSL. Replaces rsyslogd, syslog-ng, and fluentd."
section = "admin"
priority = "optional"
assets = [
    ["target/release/limpid", "usr/bin/", "755"],
    ["target/release/limpidctl", "usr/bin/", "755"],
    ["../../packaging/limpid.conf.example", "usr/share/limpid/limpid.conf.example", "644"],
    ["../../README.md", "usr/share/doc/limpid/README.md", "644"],
    # Snippet library — installed read-only under /usr/share/limpid/snippets/
    # so user configs can `include "/usr/share/limpid/snippets/parsers/<vendor>.limpid"`.
    # The config loader's allow-list (config.rs SYSTEM_SNIPPET_DIR) explicitly
    # permits absolute includes under this prefix.
    ["../../packaging/snippets/_common/cef.limpid",                "usr/share/limpid/snippets/_common/cef.limpid",                "644"],
    ["../../packaging/snippets/_common/cef_vendor_dispatch.limpid", "usr/share/limpid/snippets/_common/cef_vendor_dispatch.limpid", "644"],
    ["../../packaging/snippets/_common/format.limpid",             "usr/share/limpid/snippets/_common/format.limpid",             "644"],
    ["../../packaging/snippets/_common/proto.limpid",              "usr/share/limpid/snippets/_common/proto.limpid",              "644"],
    ["../../packaging/snippets/_common/severity.limpid",           "usr/share/limpid/snippets/_common/severity.limpid",           "644"],
    ["../../packaging/snippets/parsers/azure_waf.limpid",          "usr/share/limpid/snippets/parsers/azure_waf.limpid",          "644"],
    ["../../packaging/snippets/parsers/checkpoint.limpid",         "usr/share/limpid/snippets/parsers/checkpoint.limpid",         "644"],
    ["../../packaging/snippets/parsers/fortigate.limpid",          "usr/share/limpid/snippets/parsers/fortigate.limpid",          "644"],
    ["../../packaging/snippets/parsers/mde.limpid",                "usr/share/limpid/snippets/parsers/mde.limpid",                "644"],
    ["../../packaging/snippets/parsers/paloalto.limpid",           "usr/share/limpid/snippets/parsers/paloalto.limpid",           "644"],
    ["../../packaging/snippets/composers/ocsf_detection_finding.limpid", "usr/share/limpid/snippets/composers/ocsf_detection_finding.limpid", "644"],
    ["../../packaging/snippets/composers/ocsf_network_activity.limpid",  "usr/share/limpid/snippets/composers/ocsf_network_activity.limpid",  "644"],
]
maintainer-scripts = "../../packaging"
systemd-units = { unit-name = "limpid", unit-scripts = "../../packaging" }
