[package]
name = "limpid"
version = "0.5.7"
edition = "2024"
description = "Log pipelines, limpid as intent."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
pest = "2"
pest_derive = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
regex-lite = "0.1"
csv = "1"
glob = "0.3"
libc = "0.2"
gethostname = "0.5"
async-trait = "0.1"
maxminddb = "0.27"
tokio-rustls = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
digest = "0.10"
base64 = "0.22"
indexmap = { version = "2", features = ["serde"] }
systemd = { version = "0.10", optional = true }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }

# OTLP (OpenTelemetry Protocol). Pre-generated message types from the
# official OpenTelemetry-rust ecosystem. `gen-tonic` pulls in tonic +
# generated gRPC client/server stubs; `with-serde` derives Serialize /
# Deserialize so the same message types serialize as both protobuf
# (binary, gRPC and HTTP/protobuf) and JSON (HTTP/JSON).
opentelemetry-proto = { version = "0.27", features = ["logs", "gen-tonic", "with-serde"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
axum = "0.7"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

[features]
journal = ["dep:systemd"]
kafka = ["dep:rdkafka"]

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }

[package.metadata.deb]
maintainer = "Naoto Morishima"
copyright = "2026, Naoto Morishima"
extended-description = "A log pipeline daemon with a readable DSL. Replaces rsyslogd, syslog-ng, and fluentd."
section = "admin"
priority = "optional"
assets = [
    ["target/release/limpid", "usr/bin/", "755"],
    ["target/release/limpidctl", "usr/bin/", "755"],
    ["../../packaging/limpid.conf.example", "usr/share/limpid/limpid.conf.example", "644"],
    ["../../README.md", "usr/share/doc/limpid/README.md", "644"],
    # The snippet library that lives under packaging/snippets/ ships in
    # v0.6.0; the config loader already honours absolute includes under
    # /usr/share/limpid/snippets/ via SYSTEM_SNIPPET_DIR (see config.rs)
    # so the .deb just needs the directory once snippets exist.
]
maintainer-scripts = "../../packaging"
systemd-units = { unit-name = "limpid", unit-scripts = "../../packaging" }
