[package]
name = "limpidctl"
version = "0.7.0"
edition = "2024"
description = "Control and debug CLI for limpid"

[[bin]]
name = "limpidctl"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
